Added Status and Type to payment
