# internal/handler/refund/refund.go
@@ -1,4 +1,4 @@
-package payment
+package refund
 
 import (
 	"net/http"
@@ -10,10 +10,10 @@ import (
 	repository "oppapi/internal/repository/payment"
 )
 
-// CreateHandler creates a new payment.
+// CreateHandler creates a new refund using reference to the original payment.
 //
-// swagger:operation POST /payment payment CreateHandler
-// Creates a new payment.
+// swagger:operation POST /refund/{id} refund CreateHandler
+// Creates a new refund using reference to the original payment.
 // ---
 // produces:
 //   - application/json
@@ -27,11 +27,10 @@ import (
 //	  '500':
 //		   description: Internal Server Error
 func CreateHandler(c *gin.Context) {
-	var payment model.Payment
-	// Check input ie. new object attributes from request body.
-	if err := c.ShouldBindJSON(&payment); err != nil {
-		// Handle error in request body.
-		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+	// id is the reference to the original payment
+	id := c.Param("id")
+	if id == "" {
+		c.JSON(http.StatusBadRequest, gin.H{"error": "Empty payment id provided"})
 		return
 	}
 	// The controller gives access to particular collection.
@@ -41,45 +40,57 @@ func CreateHandler(c *gin.Context) {
 		c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
 		return
 	}
-	payment.Type = "REGULAR"
-	payment.Status = "PENDING"
-	pval, err := tc.Create(&payment)
+	// Refund refers to a previous payment & transaction.
+	payment, err := tc.ReadOne(id)
+	if err != nil {
+		// Handle error in repository read operation.
+		c.JSON(http.StatusNotFound, gin.H{"error": err.Error()})
+		return
+	}
+	var refund model.Payment = model.Payment{
+		Type:     "REFUND",
+		Amount:   payment.Amount,
+		Currency: payment.Currency,
+		Method:   payment.Method,
+		Status:   "PENDING",
+	}
+	pval, err := tc.Create(&refund)
 	if err != nil {
 		// Handle error in object creation.
 		c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
 		return
 	}
-	tval, err := bank.Resolve(payment)
+	tval, err := bank.Resolve(refund)
 	if err != nil {
-		// Handle error in payment resolution by marchant's bank.
+		// Handle error in refund resolution by marchant's bank.
 		c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
 		return
 	}
 	pval.Status = "OK"
 	err = tc.SetStatus(pval.ID.Hex(), pval.Status)
 	if err != nil {
-		// Handle error payment update
+		// Handle error payment update.
 		c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
 		return
 	}
 	r := map[string]interface{}{
 		"Status":      tval.Status,
-		"Payment":     pval,
+		"Refund":      pval,
 		"Transaction": tval,
 	}
 	c.JSON(http.StatusOK, r)
 	return
 }
 
-// ReadHOneHandler reads one payment by id.
+// ReadHOneHandler reads one refund by id.
 //
-// swagger:operation GET /payment/{id} payment ReadOneHandler
-// Reads one one payment by id.
+// swagger:operation GET /refund/{id} refund ReadOneHandler
+// Reads one one refund by id.
 // ---
 // parameters:
 //   - name: id
 //     in: path
-//     description: ID of the payment
+//     description: ID of the refund
 //     required: true
 //     type: string
 //
@@ -98,7 +109,7 @@ func CreateHandler(c *gin.Context) {
 func ReadOneHandler(c *gin.Context) {
 	id := c.Param("id")
 	if id == "" {
-		c.JSON(http.StatusBadRequest, gin.H{"error": "Empty payment id provided"})
+		c.JSON(http.StatusBadRequest, gin.H{"error": "Empty refund id provided"})
 		return
 	}
 	// The controlle gives access to particular collection.
@@ -114,9 +125,13 @@ func ReadOneHandler(c *gin.Context) {
 		c.JSON(http.StatusNotFound, gin.H{"error": err.Error()})
 		return
 	}
+	if rval.Type != "REFUND" {
+		c.JSON(http.StatusBadRequest, gin.H{"error": "Invalid type, expected REFUND, found: " + rval.Type})
+		return
+	}
 	r := map[string]interface{}{
-		"Status":  "Ok",
-		"Payment": rval,
+		"Status": "Ok",
+		"Refund": rval,
 	}
 	c.JSON(http.StatusOK, r)
 	return
