# internal/server/server.go
@@ -8,6 +8,7 @@ import (
 	"oppapi/internal/config"
 	"oppapi/internal/handler"
 	"oppapi/internal/handler/payment"
+	"oppapi/internal/handler/refund"
 	"oppapi/internal/handler/transaction"
 	"oppapi/internal/logging"
 	"oppapi/internal/middleware"
@@ -47,11 +48,17 @@ func (s *Server) Run() error {
 	return s.router.Run(":" + port)
 }
 
-// RegisterHandlers links handlers to API points.
+// RegisterHandlers links handlers to api points.
 func (s *Server) RegisterHandlers() {
+	// system api point for health check
 	s.router.GET("/health", handler.HealthHandler)
+
+	// api points for payments & refunds
 	s.router.POST("/payment", payment.CreateHandler)
 	s.router.GET("/payment/:id", payment.ReadOneHandler)
-	// bank mock
-	s.router.POST("/transaction", transaction.CreateHandler)
+	s.router.POST("/refund/:id", refund.CreateHandler)
+	s.router.GET("/refund/:id", refund.ReadOneHandler)
+
+	// bank mock for payment processing
+	s.router.POST("/bankmock/transaction", transaction.CreateHandler)
 }
